# backend/swagger.yaml
@@ -1,4 +1,3 @@
-# swagger.yaml
 openapi: 3.0.0
 info:
   title: Sample API
@@ -12,16 +11,19 @@ servers:
   - url: http://localhost:3005
     description: Local development server
 tags:
+  - name: Auth
+    description: Operations related to user authentication
   - name: EC2
     description: Operations related to EC2 instances
-  - name: Auth
-    description: Operations related to authentication
+  - name: AWS
+    description: Operations related to AWS account credentials
+
 paths:
-  /auth:
+  /auth/signup:
     post:
-      summary: Authenticate user to access AWS credentials
-      description: Authenticate user
-      operationId: "0"
+      summary: Create a user account
+      description: Endpoint to create a new user account
+      operationId: signup
       tags:
         - Auth
       requestBody:
@@ -33,11 +35,16 @@ paths:
               properties:
                 username:
                   type: string
+                  example: john_doe
                 password:
                   type: string
+                  example: password123
+              required:
+                - username
+                - password
       responses:
-        "200":
-          description: "User Authenticated"
+        "201":
+          description: User created successfully
           content:
             application/json:
               schema:
@@ -45,20 +52,113 @@ paths:
                 properties:
                   keyID:
                     type: string
+                    example: "your-key-id"
                   accessKey:
                     type: string
-        "403":
-          description: "User Forbidden"
+                    example: "your-access-key"
         "400":
-          description: Bad Request
+          description: Invalid input
         "500":
-          description: Server Error
+          description: Internal server error
 
-  /ec2/deploy:
+  /auth/signin:
+    post:
+      summary: Authenticate a user account
+      description: Endpoint to authenticate a user and obtain a JWT token
+      operationId: signin
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: john_doe
+                password:
+                  type: string
+                  example: password123
+              required:
+                - username
+                - password
+      responses:
+        "200":
+          description: Authentication successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: "your-jwt-token"
+        "400":
+          description: Invalid credentials
+        "500":
+          description: Internal server error
+
+  /aws/auth:
+    post:
+      summary: Create or update AWS account credentials
+      description: Create or update AWS account credentials associated with the authenticated user
+      operationId: createAWSAccount
+      tags:
+        - AWS
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                accessKey:
+                  type: string
+                  example: "your-access-key"
+                keyId:
+                  type: string
+                  example: "your-key-id"
+              required:
+                - accessKey
+                - keyId
+      responses:
+        "201":
+          description: AWS account credentials created or updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "AWS account credentials created or updated successfully!"
+                  awsAccount:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        example: 1
+                      accessKey:
+                        type: string
+                        example: "your-access-key"
+                      keyId:
+                        type: string
+                        example: "your-key-id"
+                      userId:
+                        type: integer
+                        example: 1
+        "400":
+          description: Invalid input
+        "500":
+          description: Internal server error
+
+  /aws/instances:
     post:
       summary: Create an EC2 instance
-      description: Launch a new EC2 instance
-      operationId: "1"
+      description: Launch a new EC2 instance with the specified parameters
+      operationId: deployInstance
       tags:
         - EC2
       requestBody:
@@ -70,25 +170,39 @@ paths:
               properties:
                 awsAccessKeyId:
                   type: string
+                  example: "your-access-key-id"
                 awsSecretAccessKey:
                   type: string
+                  example: "your-secret-access-key"
                 region:
                   type: string
+                  example: "us-east-1"
                 amiId:
                   type: string
+                  example: "ami-12345678"
                 instanceType:
                   type: string
+                  example: "t2.micro"
                 keyName:
                   type: string
+                  example: "your-key-name"
                 securityGroupIds:
                   type: array
                   items:
                     type: string
+                  example: ["sg-0123456789abcdef0"]
                 subnetId:
                   type: string
+                  example: "subnet-0123456789abcdef0"
+              required:
+                - awsAccessKeyId
+                - awsSecretAccessKey
+                - region
+                - amiId
+                - instanceType
       responses:
         "200":
-          description: Instance created successfully
+          description: EC2 instance created successfully
           content:
             application/json:
               schema:
@@ -96,9 +210,132 @@ paths:
                 properties:
                   instanceId:
                     type: string
+                    example: "i-1234567890abcdef0"
                   state:
                     type: string
+                    example: "running"
         "400":
-          description: Bad Request
+          description: Invalid input
         "500":
-          description: Server Error
+          description: Internal server error
+
+    get:
+      summary: List all EC2 instances
+      description: Retrieve a list of all EC2 instances associated with the user
+      operationId: listInstances
+      tags:
+        - EC2
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                region:
+                  type: string
+                  example: "us-east-1"
+      responses:
+        "200":
+          description: List of EC2 instances
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  instances:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        instanceId:
+                          type: string
+                          example: "i-1234567890abcdef0"
+                        state:
+                          type: string
+                          example: "running"
+
+                      required:
+                        - instanceId
+        "500":
+          description: Internal server error
+
+    delete:
+      summary: Terminate an EC2 instance
+      description: Terminate an existing EC2 instance
+      operationId: terminateInstance
+      tags:
+        - EC2
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                instanceIds:
+                  type: array
+                  example: ["i-1234567890abcdef0"]
+                region:
+                  type: string
+                  example: "us-east-1"
+              required:
+                - instanceId
+                - region
+      responses:
+        "200":
+          description: EC2 instance terminated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  instanceId:
+                    type: string
+                    example: "i-1234567890abcdef0"
+                  state:
+                    type: string
+                    example: "terminated"
+        "400":
+          description: Invalid input
+        "500":
+          description: Internal server error
+  /aws/instances/keypair:
+    post:
+      summary: Create AWS EC2 keypair
+      description: Create AWS EC2 Keypair used to access EC2 instances
+      operationId: createKeyPair
+      tags:
+        - EC2
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                keyName:
+                  type: string
+                  example: "key-pair-1"
+                region:
+                  type: string
+                  example: "us-east-1"
+              required:
+                - region
+                - keyName
+      responses:
+        "201":
+          description: AWS EC2 keypair successfully created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Key pair successfully created"
+                  keyName:
+                    type: string
+                    example: "key-pair-1"
+        "500":
+          description: Internal server error
